--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -16,16 +16,20 @@
 </head>
 <body>
 <div class="container">
-
-    <h2>Login</h2>
+    <h2>Sign-in</h2>
     <form th:action="@{/sign-in}" th:method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br>
-
-        <button type="submit">Login</button>
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username"><br>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password"><br>
+        </div>
+        <div>
+            <button type="submit">Sign-in</button>
+            <a th:href="@{/sign-up}">Sign-up</a>
+        </div>
     </form>
 </div>
 
