--- a/src/main/resources/templates/accounts/list.html
+++ b/src/main/resources/templates/accounts/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--suppress HtmlUnknownAttribute -->
+<!--suppress HtmlUnknownAttribute, XmlUnusedNamespaceDeclaration -->
 <html lang="ko" th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
