feat: 홈 컨트롤러 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <main layout:fragment="content">
-        내용
+        <h1>Index</h1>
+        <a th:href="@{/accounts}">accounts</a>
     </main>
 </body>
 </html>
