--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" th:lang="${#locale.language}"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
     <meta charset="utf-8">
@@ -10,27 +9,33 @@
     <meta name="author" content="">
 
     <title>로그인</title>
+    <!--suppress JSUnresolvedLibraryURL -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!--suppress JSUnresolvedLibraryURL -->
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
 
 </head>
 <body>
 <div class="container">
-    <h2>Sign-in</h2>
-    <form th:action="@{/sign-in}" th:method="post">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username"><br>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="text-center">로그인</h2>
+            <form th:action="@{/sign-in}" th:method="post" class="mt-4">
+                <div class="form-group">
+                    <label for="username">사용자 이름:</label>
+                    <input type="text" id="username" name="username" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="password">비밀번호:</label>
+                    <input type="password" id="password" name="password" class="form-control">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block">로그인</button>
+                    <a th:href="@{/sign-up}" class="btn btn-link btn-block">회원가입</a>
+                </div>
+            </form>
         </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password"><br>
-        </div>
-        <div>
-            <button type="submit">Sign-in</button>
-            <a th:href="@{/sign-up}">Sign-up</a>
-        </div>
-    </form>
+    </div>
 </div>
 
 </body>
