--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" th:lang="${#locale.language}"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
     <meta charset="utf-8">
@@ -10,7 +9,9 @@
     <meta name="author" content="">
 
     <title>회원가입</title>
+    <!--suppress JSUnresolvedLibraryURL -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!--suppress JSUnresolvedLibraryURL -->
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
     <style>
         .error {
@@ -23,28 +24,32 @@
 </head>
 <body>
 <div class="container">
-    <h2>Sign-up</h2>
-    <form th:action="@{/sign-up}" th:method="post" th:object="${command}">
-        <div>
-            <label th:for="username">Username:</label>
-            <input type="text" th:field="*{username}"><br>
-            <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="error"></span>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="text-center">회원가입</h2>
+            <form th:action="@{/sign-up}" th:method="post" th:object="${command}" class="mt-4">
+                <div class="form-group">
+                    <label for="username">사용자 이름:</label>
+                    <input type="text" id="username" th:field="*{username}" class="form-control">
+                    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="error"></span>
+                </div>
+                <div class="form-group">
+                    <label for="password">비밀번호:</label>
+                    <input type="password" id="password" th:field="*{password}" class="form-control">
+                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error"></span>
+                </div>
+                <div class="form-group">
+                    <label for="name">이름:</label>
+                    <input type="text" id="name" th:field="*{name}" class="form-control">
+                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="error"></span>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block">회원가입</button>
+                    <a th:href="@{/sign-in}" class="btn btn-link btn-block">로그인</a>
+                </div>
+            </form>
         </div>
-        <div>
-            <label th:for="password">Password:</label>
-            <input type="password" th:field="*{password}"><br>
-            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error"></span>
-        </div>
-        <div>
-            <label th:for="name">Name:</label>
-            <input type="text" th:field="*{name}"><br>
-            <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="error"></span>
-        </div>
-        <div>
-            <button type="submit">Sign-up</button>
-            <a th:href="@{/sign-in}">Sign-in</a>
-        </div>
-    </form>
+    </div>
 </div>
 
 </body>
