--- a/src/main/resources/templates/accounts/new.html
+++ b/src/main/resources/templates/accounts/new.html
@@ -7,30 +7,46 @@
     <meta charset="UTF-8">
     <title>Account - index</title>
 
-    <script>
-    </script>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        .error {
+            color: red;
+            font-size: small;
+            margin-left: 5px;
+        }
+    </style>
 
 </head>
 <body>
-    <main layout:fragment="content">
-        <a th:href="@{/accounts/new}">생성</a>
-        <div class="container mt-3">
-            <!--/* 회원 생성 폼을 만듭니다. */-->
-            <form th:action="@{/accounts}" th:post="post" th:object="${}">
-                <div>
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username"><br>
-                </div>
-                <div>
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password"><br>
-                </div>
-                <div>
-                    <label for="name">Password:</label>
-                    <input type="text" id="name" name="password"><br>
-                </div>
-            </form>
-        </div>
-    </main>
+<main layout:fragment="content">
+    <a th:href="@{/accounts/new}" class="btn btn-primary">생성</a>
+    <div class="container mt-3">
+        <!-- 회원 생성 폼을 만듭니다. -->
+        <form th:action="@{/accounts}" method="post" th:object="${command}" class="needs-validation" novalidate>
+            <div class="form-group">
+                <label for="username">계정명</label>
+                <input type="text" id="username" th:field="*{username}" class="form-control" required>
+                <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="error"></span>
+            </div>
+            <div class="form-group">
+                <label for="password">패스워드</label>
+                <input type="password" id="password" th:field="*{password}" class="form-control" required>
+                <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error"></span>
+            </div>
+            <div class="form-group">
+                <label for="name">이름</label>
+                <input type="text" id="name" th:field="*{name}" class="form-control" required>
+                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="error"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+</main>
+
+<!-- Bootstrap JS and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
