--- a/src/main/resources/templates/accounts/list.html
+++ b/src/main/resources/templates/accounts/list.html
@@ -8,54 +8,42 @@
     <meta charset="UTF-8">
     <title>Account - index</title>
 
+    <!-- Toast UI Grid CSS -->
+    <!--suppress JSUnresolvedLibraryURL -->
+    <link rel="stylesheet" href="https://uicdn.toast.com/tui-grid/latest/tui-grid.css" />
+
+    <!-- Toast UI Grid JS -->
+    <!--suppress JSUnresolvedLibraryURL -->
+    <script src="https://uicdn.toast.com/tui-grid/latest/tui-grid.js"></script>
+
     <script>
+        const Grid = tui.Grid;
+
+        fetch('http://localhost:8080/api/accounts')
+            .then(response => response.json())
+            .then(data => {
+                const grid = new Grid({
+                    el: document.getElementById('grid'),
+                    data: data._embedded.accounts,
+                    columns: [
+                        {header: '계정명', name: 'username'},
+                        {header: '이름', name: 'name'},
+                        {header: '생성 일시', name: 'createdAt'},
+                        {header: '수정 일시', name: 'modifiedAt'}
+                    ]
+                });
+            })
+            .catch(error => console.error('Error:', error));
+
+
     </script>
 
 </head>
 <body>
 <main layout:fragment="content">
     <a th:href="@{/accounts/new}">생성</a>
-    <div class="container mt-3">
-        <!--/* Table */-->
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>계정명</th>
-                <th>생성일시</th>
-                <th>수정일시</th>
-            </tr>
-            </thead>
-            <tbody>
-                <tr th:each="account : ${page.getContent()}">
-                    <td th:text="${account.username}"></td>
-                    <td th:text="${account.createdAt}"></td>
-                    <td th:text="${account.modifiedAt}"></td>
-                </tr>
-            </tbody>
-        </table>
+    <div id="grid"></div>
 
-        <!--/* Pagination */-->
-        <nav aria-label="Page navigation">
-            <ul class="pagination">
-                <!-- 이전 페이지 링크 -->
-                <li class="page-item" th:unless="${page.first}">
-                    <a class="page-link" th:href="@{/accounts(page=${page.number - 1}, size=${page.size})}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <!-- 페이지 번호 링크 -->
-                <li class="page-item" th:each="pageNum : ${#numbers.sequence(0, page.totalPages - 1)}" th:class="${pageNum == page.number} ? active">
-                    <a class="page-link" th:href="@{/accounts(page=${pageNum}, size=${page.size})}" th:text="${pageNum + 1}"></a>
-                </li>
-                <!-- 다음 페이지 링크 -->
-                <li class="page-item" th:unless="${page.last}">
-                    <a class="page-link" th:href="@{/accounts(page=${page.number + 1}, size=${page.size})}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
 </main>
 </body>
 </html>
